--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,6 +12,7 @@
 }
 .header {
   padding: 20px 0;
+  margin-bottom: 40px;
 }
 
 .header .container {
@@ -20,15 +21,10 @@
   justify-content: space-between;
 }
 
-.logo a {
-  font-size: 24px;
-  color: #fff;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 500;
-  letter-spacing: 2px;
-  text-transform: uppercase;
+.logo img {
+  width: 400px;
+  height: 84px;
+  object-fit: contain;
 }
 
 .navs {
