--- a/src/components/order/Order.css
+++ b/src/components/order/Order.css
@@ -1,5 +1,5 @@
 .order-container {
-  background: #3a9c6f;
+  background: #182d9a;
   padding: 60px 0;
   margin-top: 50px;
 }
@@ -16,112 +16,112 @@
 }
 
 .form {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20px;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  gap: 20px;
 }
 
 .form input {
-    background: transparent;
-    height: 50px;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid #fff;
-    padding: 0 20px;
-    color: #fff !important;
-    font-size: 20px;
+  background: transparent;
+  height: 50px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #fff;
+  padding: 0 20px;
+  color: #fff !important;
+  font-size: 20px;
 }
 
 .form input::placeholder {
-    color: #fff !important;
+  color: #fff !important;
 }
 
 .name {
-    flex: 1 0 120px;
+  flex: 1 0 120px;
 }
 
 .phone-number {
-    flex: 1 0 120px;
+  flex: 1 0 120px;
 }
 
 .submit {
-    flex: 1 0 20px;
-    background-color: #fff;
-    color: #3a9c6f;
-    font-size: 20px;
-    font-weight: 500;
-    border-radius: 50px;
+  flex: 1 0 20px;
+  background-color: #fff;
+  color: #3a9c6f;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 50px;
 }
 
 @media (max-width: 1024px) {
-    .order-container {
-        max-width: 1024px;
-    }
-    .order-container .container {
-        max-width: 960px;
-    }
-    .order-container .container h2 {
-        margin-left: 20px;
-    }
+  .order-container {
+    max-width: 1024px;
+  }
+  .order-container .container {
+    max-width: 960px;
+  }
+  .order-container .container h2 {
+    margin-left: 20px;
+  }
 }
 
 @media (max-width: 992px) {
-    .order-container {
-        max-width: 992px;
-    }
-    .order-container .container {
-        max-width: 960px;
-    }
-    .order-container .container h2 {
-        margin-left: 20px;
-    }
+  .order-container {
+    max-width: 992px;
+  }
+  .order-container .container {
+    max-width: 960px;
+  }
+  .order-container .container h2 {
+    margin-left: 20px;
+  }
 }
 
 @media (max-width: 768px) {
-    .order-container {
-        max-width: 768px;
-    }
-    .order-container .container {
-        max-width: 720px;
-    }
-    .order-container .container h2 {
-        margin-left: 20px;
-    }
+  .order-container {
+    max-width: 768px;
+  }
+  .order-container .container {
+    max-width: 720px;
+  }
+  .order-container .container h2 {
+    margin-left: 20px;
+  }
 }
 
 @media (max-width: 425px) {
-    .order-container {
-        max-width: 425px;
-    }
-    .order-container .container {
-        max-width: 375px;
-    }
-    .order-container .container h2 {
-        margin-left: 15px;
-    }
+  .order-container {
+    max-width: 425px;
+  }
+  .order-container .container {
+    max-width: 375px;
+  }
+  .order-container .container h2 {
+    margin-left: 15px;
+  }
 }
 
 @media (max-width: 375px) {
-    .order-container {
-        max-width: 375px;
-    }
-    .order-container .container {
-        max-width: 320px;
-    }
-    .order-container .container h2 {
-        margin-left: 15px;
-    }
+  .order-container {
+    max-width: 375px;
+  }
+  .order-container .container {
+    max-width: 320px;
+  }
+  .order-container .container h2 {
+    margin-left: 15px;
+  }
 }
 
 @media (max-width: 320px) {
-    .order-container {
-        max-width: 320px;
-    }
-    .order-container .container {
-        max-width: 300px;
-    }
-    .order-container .container h2 {
-        margin-left: 20px;
-    }
+  .order-container {
+    max-width: 320px;
+  }
+  .order-container .container {
+    max-width: 300px;
+  }
+  .order-container .container h2 {
+    margin-left: 20px;
+  }
 }
