--- a/src/components/delivery/Delivery.css
+++ b/src/components/delivery/Delivery.css
@@ -15,7 +15,7 @@
   font-size: 18px;
   font-weight: 500;
   text-wrap: balance;
-  color: #3a9c6f !important;
+  color: #182d9a !important;
 }
 
 .top-delivery {
