--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,7 +12,6 @@
 }
 .header {
   padding: 20px 0;
-  margin-bottom: 40px;
 }
 
 .header .container {
@@ -45,6 +44,11 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: 400;
+}
+
+.active {
+  color: #182d9a !important;
+  border-bottom: 2px solid #182d9a !important;
 }
 
 .burger {
@@ -117,6 +121,9 @@
     width: 100%;
     margin: 0 auto;
   }
+  .logo img {
+    width: 200px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -135,7 +142,7 @@
     display: block;
     position: fixed;
     overflow: hidden;
-    top: 50px;
+    top: 100px;
     right: 0;
     left: 0;
     bottom: 0;
@@ -238,7 +245,7 @@
     display: block;
     position: fixed;
     overflow: hidden;
-    top: 50px;
+    top: 100px;
     right: 0;
     left: 0;
     bottom: 0;
@@ -334,7 +341,7 @@
     display: none;
   }
   .burger span {
-    background: #3a9c6f !important;
+    background: #000 !important;
   }
   .nav-mobile {
     width: 400px;
@@ -344,7 +351,7 @@
     display: block;
     position: fixed;
     overflow: hidden;
-    top: 50px;
+    top: 100px;
     right: 0;
     left: 0;
     bottom: 0;
