--- a/src/components/partner/Partner.css
+++ b/src/components/partner/Partner.css
@@ -1,5 +1,5 @@
 .partner {
-  margin-top: 350px;
+  margin-top: 70px;
 }
 
 .partner .container h2 {
@@ -25,7 +25,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px;
   cursor: pointer;
   transform: scale(0.9);
   transition: transform 0.3s ease;
@@ -54,6 +53,15 @@
 
 .partner-card:hover {
   transform: scale(1);
+}
+
+.partner-card-image {
+  height: 150px;
+}
+
+.partner-card-image img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
@@ -161,7 +169,6 @@
 }
 
 .partner-card-svg {
-  width: 250px;
   padding: 0;
   margin: 0;
   object-fit: cover;
