--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,7 +7,7 @@
   transition: 0.3s;
 }
 .header-scrolled {
-  background: #f2f2f2;
+  background: #bbc5fa;
   transition: 0.3s;
 }
 .header {
@@ -21,7 +21,7 @@
 }
 
 .logo img {
-  width: 400px;
+  width: 300px;
   height: 84px;
   object-fit: contain;
 }
@@ -122,7 +122,7 @@
     margin: 0 auto;
   }
   .logo img {
-    width: 200px;
+    width: 130px;
   }
 }
 
