--- a/src/components/order/Order.css
+++ b/src/components/order/Order.css
@@ -1,7 +1,10 @@
+.order-top {
+  margin-top: 100px;
+}
+
 .order-container {
   background: #182d9a;
-  padding: 60px 0;
-  margin-top: 100px;
+  padding: 80px 0;
 }
 
 .order-container .container {
