--- a/src/components/partner/Partner.css
+++ b/src/components/partner/Partner.css
@@ -10,13 +10,12 @@
 .partner-box {
   display: flex;
   flex-wrap: wrap;
-  gap: 25px;
   margin-top: 40px;
 }
 
 .partner-card {
-  width: 299px;
-  height: 271px;
+  width: 300px;
+  height: 370px;
   margin: 0 auto;
   border: 1px solid rgba(224, 224, 224, 1);
   border-radius: 33px;
@@ -31,19 +30,19 @@
 }
 
 .partner-card:last-child {
-  width: 250px;
+  width: 280px;
 }
 
 .partner-card:nth-last-child(2) {
-  width: 250px;
+  width: 280px;
 }
 
 .partner-card:nth-last-child(3) {
-  width: 250px;
+  width: 280px;
 }
 
 .partner-card:nth-last-child(4) {
-  width: 250px;
+  width: 280px;
 }
 
 .partner-card p {
@@ -56,12 +55,14 @@
 }
 
 .partner-card-image {
-  height: 150px;
+  width: 250px;
+  height: 300px;
 }
 
 .partner-card-image img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 @media (max-width: 1024px) {
@@ -73,6 +74,12 @@
   .partner .container {
     max-width: 960px;
     width: 100%;
+  }
+
+  .partner-box {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
   }
 
   .partner-card {
@@ -159,7 +166,7 @@
 }
 
 /* --------- */
-.partner-card-svg {
+/* .partner-card-svg {
   fill: black;
   transition: fill 0.3s;
 }
@@ -172,4 +179,4 @@
   padding: 0;
   margin: 0;
   object-fit: cover;
-}
+} */
